# ztbackup

./: .gitignore  README  README.md  configure.ac
src/: .ztexclude  BackupFolder.cpp  BackupFolder.h  ExcludeList.cpp  ExcludeList.h  LocalBackupFolder.cpp  LocalBackupFolder.h  LogFile.cpp  LogFile.h  Makefile.am  SmbBackupFolder.cpp  SmbBackupFolder.h  Ssh2BackupFolder.cpp  Ssh2BackupFolder.h  StringSink.h  Util.h  main.cpp
